# libpck

./: .gitignore  CMakeLists.txt  LICENSE  README.md  libpck.sln  libpck2.sln
ELanguageInterface/: libpck.e  libpck_static.e  pcktest.e
UnitTest1/: UnitTest1.vcxproj  stdafx.cpp  test.pck  unittest1.cpp
include/: pckdef.h  pckfile.h  pckfile_c.h  pckitem.h  pcktree.h
libpck/: libpck.rc  libpck.vcxproj  libpck.vcxproj.filters  makefile  myfilesystem.h  pckdef.h  pckfile.cpp  pckfile_c.cpp  pckfile_c.h  pckfileio.h  pckhelper.h  pckitem.cpp  pckitem.h  pckmain.cpp  pckpendingitem.h  stringhelper.h
libpck.dll/: libpck.def  libpck.dll.vcxproj  libpck.dll.vcxproj.filters  libpck.rc  resource.h
libpck/zlib/x64/: zlibstat.lib  zlibwapi.lib
libpck/zlib/x86/: zlibstat.lib  zlibwapi.lib
libpck2/: ReadMe.txt  libpck2.vcxproj  pckdef.h  pckfile.h  stringhelper.h
linux/: makefile  pckmain.cpp
pcktool/: README.txt  pcktool.cpp  pcktool.vcxproj  pcktool.vcxproj.filters  stdafx.cpp
src/: myfilesystem.h  pckfile.cpp  pckfile_c.cpp  pckfileio.h  pckhelper.h  pckpendingitem.h  pcktree.cpp  stringhelper.h
zlib/: zlib.vcxproj  zlib.vcxproj.filters
zlib-ng/: zlib-ng.vcxproj  zlib-ng.vcxproj.filters
zlib/include/: zconf.h
zlib/masmx64/: gvmat64.lst  inffasx64.lst
zlib/masmx86/: inffas32.lst  match686.lst
zlib/x64/: zlibstat.lib  zlibstatd.lib
zlib/x86/: zlibstat.lib  zlibstatd.lib
